# Vmangos

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: dev-release.yml  vmangos.yml
cmake/: common.cmake  options.cmake  showoptions.cmake
cmake/compiler/msvc/: settings.cmake
cmake/find/: FindMySQL.cmake  FindPCHSupport.cmake
cmake/platform/: detect_platform.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
contrib/extractor/: System.cpp
contrib/mmap/: CMakeLists.txt  mmap_extract.py
contrib/mmap/src/: MapBuilder.cpp  MapBuilder.h  TileWorker.cpp  TileWorker.h  generator.cpp
contrib/vmap_extractor/vmapextract/: vmapexport.cpp  wmo.cpp  wmo.h
dep/: CMakeLists.txt
dep/lualib/: CMakeLists.txt
dep/lualib/lua/: CMakeLists.txt
dep/windows/optional_dependencies/: curl_download_and_build.bat
sql/migrations/: 20241023190300_world.sql  20241026225509_world.sql  20241027045545_world.sql  20241027164727_world.sql  20241029210259_world.sql  20241110044245_world.sql  20241113131610_characters.sql  20241114131912_characters.sql  20241115100757_world.sql  20241116214502_world.sql  20241117085946_world.sql  20241117181938_world.sql  20241118130644_world.sql  20241128134921_world.sql  20241129002320_world.sql
src/framework/Network/: MangosSocketMgrImpl.h
src/game/: AccountMgr.cpp  CMakeLists.txt  Formulas.h  GameEventMgr.cpp  ItemEnchantmentMgr.cpp  ObjectMgr.cpp  ObjectMgr.h  QuestDef.cpp  QuestDef.h  ReputationMgr.cpp  ScriptMgr.cpp  ScriptMgr.h  Weather.cpp  World.cpp  World.h  WorldSession.cpp  WorldSession.h
src/game/Anticheat/: Anticheat.cpp  Anticheat.h
src/game/Anticheat/WardenAnticheat/: WardenModuleMgr.cpp  WardenScan.cpp  WardenScanMgr.cpp  WardenWin.cpp
src/game/Battlegrounds/: BattleGround.cpp  BattleGround.h
src/game/Chat/: Chat.cpp
src/game/Group/: Group.cpp
src/game/Guild/: Guild.cpp  Guild.h
src/game/Handlers/: AuctionHouseHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  GroupHandler.cpp  GuildHandler.cpp  LootHandler.cpp  MailHandler.cpp  MiscHandler.cpp  NPCHandler.cpp  QuestHandler.cpp  SpellHandler.cpp  TradeHandler.cpp
src/game/Maps/: GridNotifiers.h  GridNotifiersImpl.h  Map.cpp  Map.h  MapManager.cpp  MapManager.h  MapPersistentStateMgr.cpp
src/game/Movement/: RandomMovementGenerator.cpp  RandomMovementGenerator.h
src/game/Objects/: Creature.cpp  Creature.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  Object.cpp  Object.h  Pet.cpp  Player.cpp  Player.h  SpellCaster.cpp  SpellCaster.h  Totem.cpp  Unit.cpp  Unit.h
src/game/PlayerBots/: BattleBotAI.cpp  BattleBotWaypoints.cpp  PlayerBotAI.cpp
src/game/Protocol/: WorldSocket.cpp
src/game/Spells/: Spell.cpp  Spell.h  SpellAuras.cpp  SpellEffects.cpp  SpellEntry.h  SpellMgr.cpp
src/game/vmap/: TileAssembler.cpp
src/mangosd/: CMakeLists.txt  Main.cpp  Master.cpp  WorldRunnable.cpp  mangosd.conf.dist.in
src/realmd/: AuthSocket.cpp  CMakeLists.txt  Main.cpp  realmd.conf.dist.in
src/scripts/kalimdor/darkshore/: darkshore.cpp
src/scripts/kalimdor/felwood/: felwood.cpp
src/scripts/kalimdor/feralas/: feralas.cpp
src/scripts/kalimdor/silithus/: silithus.cpp
src/scripts/kalimdor/silithus/ruins_of_ahnqiraj/: instance_ruins_of_ahnqiraj.cpp
src/shared/: CMakeLists.txt  Log.cpp  Log.h  SendgridMail.h
src/shared/Auth/: AuthCrypt.cpp  AuthCrypt.h
src/shared/Crypto/Authentication/: SRP6.h
src/shared/Crypto/Hash/: HMACSHA1.cpp  HMACSHA1.h  Hmac.h  MD5.h
src/shared/Database/: Database.cpp  DatabaseMysql.cpp  Field.h
src/shared/nonstd/: optional.hpp
